--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			</div>
 			<div id="social-animate" class="fh5co-social">
 				<ul>
-					<li><a href="http://weibo.com/2263442785" class="to-animate"><i class="icon-sina-weibo"></i></a></li>
-					<li><a href="https://cn.linkedin.com/in/浩淼-赵-2b64aa101" class="to-animate"><i class="icon-linkedin-with-circle"></i></a></li>
+					<li><a href="http://weibo.com/2263442785" target="_blank" class="to-animate"><i class="icon-sina-weibo"></i></a></li>
+					<li><a href="https://cn.linkedin.com/in/浩淼-赵-2b64aa101" target="_blank" class="to-animate"><i class="icon-linkedin-with-circle"></i></a></li>
 					
 				</ul>
 			</div>
