--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<p class="to-animate">但是 也爱。</br>以一种极端而又被强制的方式 甚至不知道是咒语的影响还是来自我的内心的</br></br>        爱极了呢...</p>
                 </small>
 				<div class="fh5co-copyright to-animate">
-					<p><small>--Jing.# </small></p>
+					<p><small>--Fallice.Zhao</small></p>
 				</div>
 			</div>
 			
