--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div id="fh5co-toggle" class="js-fh5co-toggle to-animate-single"><a href="#fh5co-bio" class="fh5co-active"><i class="icon-align-right"></i></a></div>
 			<div id="fh5co-intro">
 				<h1><span class="to-animate">Fallice,</span> <span class="to-animate">Product Manager,</span> <span class="to-animate">Philharmonic,</span> <span class="to-animate">Gamer</span></h1>
-				<p class="to-animate">The beautiful beginning. Email me at <a href="mailto:Fallice@live.com" class="to-animate">Fallice@live.com</a></p>
+				<p class="to-animate">Email me at <a href="mailto:Fallice@live.com" class="to-animate">Fallice@live.com</a></p>
 			</div>
 			<div id="social-animate" class="fh5co-social">
 				<ul>
