--- a/index.html
+++ b/index.html
@@ -65,21 +65,32 @@
         <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站模板</a></div>
 		<div id="fh5co-bio">
 			<div id="fh5co-bio-inner">
-            <small>
-				<p class="to-animate">不是誓言 是咒语。</br>
-									不是信托 是依附。</p>
-				<p class="to-animate">我一次又一次感受到</br>
-									那是一种我丝毫无力抗拒的力量、</br>
-									他决定着我的欢笑与痛苦</br>
-									决定着生与死</br>
-									没有了花。心还可以存在</br>
-									他给我了心 也随时可以把它夺去</br>
-									也在用这颗心 来控制了我的一切</br>
-									是魔法师 是传教士 还只是一个 任性的自私的小孩子 我不能猜</br>
-									只是能感知到 他在控制我的行为 甚至思想</br>
-									我怕 怕极了 没有了丝毫自我保护的能力</p>
-				<p class="to-animate">但是 也爱。</br>以一种极端而又被强制的方式 甚至不知道是咒语的影响还是来自我的内心的</br></br>        爱极了呢...</p>
-                </small>
+        		<small>
+				<p class="to-animate">
+					We were both young when I first saw you.</br>
+					I close my eyes and the flashback starts:</br>
+					I'm standing there on a balcony in summer air.</br>
+					</br>
+					See the lights, see the party, the ball gowns.</br>
+					See you make your way through the crowd</br>
+					and say hello;</br>
+					Little did I know</br>
+					</br>
+					That you were Romeo; you were throwing pebbles,</br>
+					And my daddy said, 
+					'Stay away from Juliet.'</br>
+					And I was crying on the staircase,</br>
+					begging you
+					'Please, don't go.'</br>
+					</br>
+					And I said,</br>
+					Romeo, take me somewhere we can be alone.</br>
+					I'll be waiting; all there's left to do is run.</br>
+					You'll be the prince and I'll be the princess</br>
+					It's a love story baby just say </br>
+					'Yes.'
+				</p>
+        		</small>
 				<div class="fh5co-copyright to-animate">
 					<p><small>--Fallice.Zhao</small></p>
 				</div>
