--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 					I'm standing there on a balcony in summer air.</br>
 					</br>
 					See the lights, see the party, the ball gowns.</br>
-					See you make your way through the crowd</br>
+					See you make your way through the crowd,</br>
 					and say hello;</br>
-					Little did I know</br>
+					Little did I know.</br>
 					</br>
 					That you were Romeo; you were throwing pebbles,</br>
 					And my daddy said, 
 					'Stay away from Juliet.'</br>
 					And I was crying on the staircase,</br>
-					begging you
+					begging you,
 					'Please, don't go.'</br>
 					</br>
 					And I said,</br>
 					Romeo, take me somewhere we can be alone.</br>
 					I'll be waiting; all there's left to do is run.</br>
-					You'll be the prince and I'll be the princess</br>
-					It's a love story baby just say </br>
+					You'll be the prince and I'll be the princess.</br>
+					It's a love story baby just say, </br>
 					'Yes.'
 				</p>
         		</small>
 				<div class="fh5co-copyright to-animate">
-					<p><small>--Fallice.Zhao</small></p>
+					<p><small>-- Love Story </small></p>
 				</div>
 			</div>
 			
